objects/webm__Webmerge_Mapping_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>webm__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>webm__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Mapping__c</fullName>
        <label>Webmerge Mapping</label>
        <referenceTo>webm__Webmerge_Mapping__c</referenceTo>
        <relationshipLabel>Webmerge Mapping Criteria</relationshipLabel>
        <relationshipName>Webmerge_Mapping_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Webmerge Mapping Criteria</label>
    <nameField>
        <displayFormat>wm{000000}</displayFormat>
        <label>Webmerge Mapping Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webmerge Mapping Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>